refactor: loadUserByUsername 메서드 가독성 개선