@@ -1,15 +1,15 @@
 package iGuard.Server.Service.admin;
 
-import iGuard.Server.Entity.CompanyUser;
 import iGuard.Server.Repository.CompanyUserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class CompanyUserDetailsService implements UserDetailsService {
@@ -19,18 +19,12 @@ public class CompanyUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        CompanyUser user= companyUserRepository.findByCompanyEmail(username);
-        if (user == null) {
-            throw new UsernameNotFoundException("User not found with email: " + username);
-        }
-        return new org.springframework.security.core.userdetails.User(
-                user.getCompanyEmail(),
-                user.getPassword(),
-                user.isVerified(),
-                true,
-                true,
-                true,
-                Arrays.asList(new SimpleGrantedAuthority("ROLE_ADMIN"))
-        );
+        return companyUserRepository.findCompanyUserByCompanyEmail(username)
+                .map(member -> new User(
+                        member.getCompanyEmail(),
+                        member.getPassword(),
+                        List.of(new SimpleGrantedAuthority("ROLE_ADMIN"))
+                ))
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with email : " + username));
     }
 }
